class Fruit {
    public:
        Fruit();
        int Randomizer();
        int PosX;
        int PosY;
};